Bluetooth: L2CAP: Allow receiving fragmented buffers
This enabled L2CAP CoC to store data in fragmented buffers, due to
increase in memory init_17 test has to be disabled ARC for Arduino 101
otherwise sanity test would not pass.

Change-Id: If04289a03e591473de4e722031c1687a14420fc2
Signed-off-by: Luiz Augusto von Dentz <luiz.von.dentz@intel.com>

--- a/tests/bluetooth/init/testcase.ini
+++ b/tests/bluetooth/init/testcase.ini
@@ -164,9 +164,10 @@ tags = bluetooth
 build_only = true
 kernel = micro
 extra_args = CONF_FILE=prj_17.conf
-# exclude STM32F103RB SoC and the Nios IIf, not enough RAM to run this test
+# exclude STM32F103RB SoC, the Nios IIf and ARC core on Arduino 101
+# not enough RAM to run this test
 filter : not CONFIG_SOC_STM32F103RB and not CONFIG_UART_ALTERA_JTAG and
-	 not CONFIG_SOC_NIOS2F_ZEPHYR
+	 not CONFIG_SOC_NIOS2F_ZEPHYR and not CONFIG_BOARD_ARDUINO_101_SSS
 
 [test_18]
 tags = bluetooth
