Bluetooth: tests: Add init config for BR/EDR SMP testing
This test build where BR/EDR SMP support is enabled without
LE central or singing support.

Change-Id: I61bc17e989a5752500a7d29557609d9e54b6006d
Signed-off-by: Szymon Janc <ext.szymon.janc@tieto.com>

--- a/tests/bluetooth/init/testcase.ini
+++ b/tests/bluetooth/init/testcase.ini
@@ -201,3 +201,10 @@ extra_args = CONF_FILE=prj_21.conf
 # exclude STM32F103RB SoC, not enough RAM to run this test
 filter = not CONFIG_SOC_STM32F103RB and not CONFIG_UART_ALTERA_JTAG
 
+[test_22]
+tags = bluetooth
+build_only = true
+kernel = micro
+extra_args = CONF_FILE=prj_22.conf
+# exclude STM32F103RB SoC, not enough RAM to run this test
+filter = not CONFIG_SOC_STM32F103RB and not CONFIG_UART_ALTERA_JTAG
